# mawa

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/adk_web_initialization/: __init__.py  adk_web_agent_definitions.py  agent.py  load_matches_eval.evalset.json
src/mawa/: adk_bridge.py  agent.py  agent_definitions.py  cache.py  callbacks.py  constants.py  main.py  mcp_tools_utils.py  tools.py  utils.py
src/mawa/static/: index.html
src/mawa_mcp_server/: data_provider.py
src/standalone/: README.md  __init__.py  agent.py  end_to_end_tests.evalset.json
